PRACTICA 9/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: practica9
  labels:
    app: helpdesk
